--- a/src/app/bookSearch/search-box/search-box.component.html
+++ b/src/app/bookSearch/search-box/search-box.component.html
@@ -1,1 +1,7 @@
-<p>search-box works!</p>
+<div class="example-container">
+    <mat-toolbar class="search-toolbar-style">Search Keyword : </mat-toolbar>
+    <mat-form-field>
+      <input matInput placeholder="Search Keyword">
+    </mat-form-field>
+    <button mat-raised-button color="warn">Search!</button>
+  </div>
