feat:Add the detail component and template

--- a/src/app/bookSearch/detail-box/detail-box.component.html
+++ b/src/app/bookSearch/detail-box/detail-box.component.html
@@ -1,1 +1,16 @@
-<p>detail-box works!</p>
+<mat-card class="example-card">
+    <mat-card-header class="detail-header-style">
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Title : Complete an Angular in one week </mat-card-title>
+      <mat-card-subtitle>Author : martin cool</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image class="book-image" src="">
+    <mat-card-content>
+      <p>
+        ISBN : 123-456, cost : 5000, pulish date : 2017/12
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button mat-raised-button color="primary">Add cart</button>
+    </mat-card-actions>
+  </mat-card>
