--- a/src/app/bookSearch/search-box/search-box.component.html
+++ b/src/app/bookSearch/search-box/search-box.component.html
@@ -1,7 +1,7 @@
 <div class="example-container">
     <mat-toolbar class="search-toolbar-style"> Search Keyword :{{keyword}} </mat-toolbar>
     <mat-form-field>
-      <input matInput #inputKeyword placeholder="Search Keyword" [(ngModel)]="keyword">
+      <input matInput #inputKeyword placeholder="Search Keyword" [(ngModel)]="keyword" (ngModelChange)="inputChange()">
     </mat-form-field>
     <button mat-raised-button color="warn" (click)="setKeyword(inputKeyword.value)">Search!</button>
   </div>
