feat:Add the disable property binding

--- a/src/app/bookSearch/detail-box/detail-box.component.css
+++ b/src/app/bookSearch/detail-box/detail-box.component.css
@@ -4,7 +4,7 @@
   }
   
   .example-header-image {
-    background-image: url('/assets/images/book-icon.jpg');
+    background-image: url('/assets/images/books-stack-of-three.png');
     background-size: cover;
   }
   
